# test-git-fossdev3

./: Makefile  docker-compose.yaml  script.py  test.py
docs_domain/: .readthedocs.yaml  Makefile
docs_domain/docs/source/: QUICKSTART.md  conf.py  index.rst
docs_domain/src/: sales.py
file_exchanger/: Makefile
file_exchanger/docs/: basic_file_transfer_usecase.drawio  context.drawio
makeutil/capp/: Makefile  main.c
order_service/: pyproject.toml
product_service/: Dockerfile  pyproject.toml
testing/frameworks/tests/tax/: __test_income.py  test_income_pytets.py
testing/principle/: setup.py
testing/principle/src/: math_demo.py
testing/principle/tests/: test_principles.py
testing/tdd/: Makefile
testing/tdd/src/: ndfl.py
testing/tdd/tests/: test_basic_ndfl.py
