[tool.poetry]
name = "order-service"
version = "0.0.1"
description = "Application for serving users orders"
authors = ["Artem Vesnin <artemvesnin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.136.1"
uvicorn = {extras = ["standart"], version = "^0.46.0"}
httpx = "^0.28.1"
psycopg = {extras = ["binary"], version = "^3.3.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
